--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -39,7 +39,7 @@ div.desc {
     {% if site.email %}
     <a href="mailto:{{ site.email }}">Email</a>
     {% endif %}
-    <a href="https://www.facebook.com/yunho0130">Facebook</a>
+    <a href="https://www.facebook.com/rla0ql">Facebook</a>
   </p>
     <!-- 
     <a href="https://www.linkedin.com/in/yunho0130">Linkedin</a>
