--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -31,8 +31,8 @@ div.desc {
   <!--
   <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="yunho0130"><a class="LI-simple-link" href='https://kr.linkedin.com/in/yunho0130?trk=profile-badge'>Yunho Maeng</a></div>
   -->
-  <p>{{ site.profile }}</p>
-  <p class="contact">
+ <!-- Profile Image -->
+<img src="https://avatars0.githubusercontent.com/u/42957531?s=460&v=4" alt="Smiley face" height="150" width="150">
     {% if site.twitter_username %}
     <a href="https://twitter.com/{{ site.twitter_username }}">Twitter</a>
     {% endif %}
